--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -10,7 +10,7 @@ body {
         transform: translate(-50%, -50%)
 }
 
-h1 {
+/* h1 {
     margin-top: -70px;
     font-size: 75px;
 }
@@ -24,7 +24,7 @@ h2 {
 
 h3 {
     padding-top: 7%;
-}
+} */
 
 button {
     border: 0;
